--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
+    "element-plus": "^2.5.3",
+    "leaflet": "^1.9.4",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
@@ -20,8 +22,13 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.4.15",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "typescript": "^5.3.3",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "vue-loader": "^17.4.2"
   },
   "eslintConfig": {
     "root": true,
